[gd_scene load_steps=8 format=3 uid="uid://d4glp02ecl6x5"]

[ext_resource type="Script" path="res://scenes/title/song_file_picker.gd" id="1_b3hli"]
[ext_resource type="Script" path="res://scenes/title/title_screen.gd" id="1_kubb5"]
[ext_resource type="Script" path="res://scenes/song_validator/song_validator.gd" id="3_oqavg"]

[sub_resource type="LabelSettings" id="LabelSettings_d8gpx"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_mcocw"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_033tt"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_uqs5o"]
font_size = 24

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_kubb5")

[node name="Panel" type="Panel" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="Title" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 328.0
offset_bottom = 136.0
text = "Rhythm Game 3
By RedSatura"
label_settings = SubResource("LabelSettings_d8gpx")

[node name="VersionNumber" type="Label" parent="."]
offset_left = 16.0
offset_top = 112.0
offset_right = 272.0
offset_bottom = 144.0
text = "v0.1.0"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(800, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
root_subfolder = "/storage/emulated/0"
filters = PackedStringArray("*.msf", "*.txt")
script = ExtResource("1_b3hli")

[node name="Official" type="Label" parent="."]
offset_left = 16.0
offset_top = 200.0
offset_right = 226.0
offset_bottom = 245.0
text = "Official Songs
"
label_settings = SubResource("LabelSettings_mcocw")

[node name="Soon" type="Label" parent="Official"]
layout_mode = 0
offset_left = 256.0
offset_top = 16.0
offset_right = 362.0
offset_bottom = 39.0
text = "Coming Soon!"

[node name="Custom" type="Label" parent="."]
offset_left = 16.0
offset_top = 328.0
offset_right = 236.0
offset_bottom = 373.0
text = "Custom Songs
"
label_settings = SubResource("LabelSettings_033tt")

[node name="OpenFile" type="Button" parent="Custom"]
layout_mode = 0
offset_top = 64.0
offset_right = 208.0
offset_bottom = 112.0
text = "Open File"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 608.0
offset_right = 1264.0
offset_bottom = 704.0
grow_horizontal = 2
grow_vertical = 0
vertical_scroll_mode = 3
metadata/_edit_group_ = true

[node name="StatusLabel" type="Label" parent="ScrollContainer"]
custom_minimum_size = Vector2(1248, 32)
layout_mode = 2
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 3

[node name="SongInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CurrentlyOpened" type="Label" parent="SongInfo"]
offset_left = 16.0
offset_top = 456.0
offset_right = 201.0
offset_bottom = 479.0
text = "Currently Opened Song:"

[node name="SongDataLabels" type="VBoxContainer" parent="SongInfo"]
offset_left = 16.0
offset_top = 488.0
offset_right = 448.0
offset_bottom = 592.0
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="SongInfo/SongDataLabels"]
layout_mode = 2
text = "Title: "

[node name="Artist" type="Label" parent="SongInfo/SongDataLabels"]
layout_mode = 2
text = "Artist: "

[node name="MapCreator" type="Label" parent="SongInfo/SongDataLabels"]
layout_mode = 2
text = "Map Creator: "

[node name="Difficulty" type="Label" parent="SongInfo/SongDataLabels"]
layout_mode = 2
text = "Difficulty: "

[node name="PlaySong" type="Button" parent="SongInfo"]
offset_left = 16.0
offset_top = 608.0
offset_right = 224.0
offset_bottom = 656.0
text = "Play Song!"

[node name="Recent" type="Label" parent="."]
visible = false
offset_left = 392.0
offset_top = 328.0
offset_right = 608.0
offset_bottom = 376.0
text = "Recently Opened (Non-Operational)"
label_settings = SubResource("LabelSettings_uqs5o")
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Recent"]
layout_mode = 0
offset_top = 64.0
offset_right = 816.0
offset_bottom = 352.0

[node name="VBoxContainer" type="VBoxContainer" parent="Recent/ScrollContainer"]
layout_mode = 2

[node name="SongValidator" type="Node2D" parent="."]
script = ExtResource("3_oqavg")

[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_file_selected"]
[connection signal="pressed" from="Custom/OpenFile" to="FileDialog" method="_on_open_file_pressed"]
[connection signal="pressed" from="SongInfo/PlaySong" to="." method="_on_play_song_pressed"]
